заменил isnull/notnull на isna/notna

--- a/DecisionTreeClassifier.ipynb
+++ b/DecisionTreeClassifier.ipynb
@@ -669,7 +669,7 @@
     "        feature_values = set(X[feature_name])\n",
     "        for feature_value in feature_values:\n",
     "            if feature_value is np.NaN:\n",
-    "                a = X.loc[X[feature_name].isnull()].index  # точки с NaN\n",
+    "                a = X.loc[X[feature_name].isna()].index  # точки с NaN\n",
     "                tmp.loc[a, f'{feature_name}_{class_}'] = -1\n",
     "            else:\n",
     "                a = X[X[feature_name] == feature_value].index  # точки с определённым значением признака\n",
