--- a/EDA.ipynb
+++ b/EDA.ipynb
@@ -1086,9 +1086,9 @@
     }
    ],
    "source": [
-    "num = df.loc[(df[defs.QUESTION_3].isin([defs.ANSWER_3_1, defs.ANSWER_3_2])), defs.QUESTION_4].isnull().sum()\n",
+    "num = df.loc[(df[defs.QUESTION_3].isin([defs.ANSWER_3_1, defs.ANSWER_3_2])), defs.QUESTION_4].isna().sum()\n",
     "print(f'Имеют в Признаке 3 \"замужем\"/\"имею гражданского супруга\", но НЕ ИМЕЮТ значения в Признаке 4 - {num} шт.')\n",
-    "num = df.loc[(df[defs.QUESTION_3].isin([defs.ANSWER_3_3, defs.ANSWER_3_4, defs.ANSWER_3_5])), defs.QUESTION_4].notnull().sum()\n",
+    "num = df.loc[(df[defs.QUESTION_3].isin([defs.ANSWER_3_3, defs.ANSWER_3_4, defs.ANSWER_3_5])), defs.QUESTION_4].notna().sum()\n",
     "print(f'Имеют в Признаке 3 \"одинока\"/\"разведена\"/\"вдова\", но ИМЕЮТ значения в Признаке 4 - {num} шт.')"
    ]
   },
@@ -1099,9 +1099,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "index = df[(df[defs.QUESTION_3].isin([defs.ANSWER_3_1, defs.ANSWER_3_2])) & (df[defs.QUESTION_4].isnull())].index\n",
+    "index = df[(df[defs.QUESTION_3].isin([defs.ANSWER_3_1, defs.ANSWER_3_2])) & (df[defs.QUESTION_4].isna())].index\n",
     "drop_df = df.drop(index=index)\n",
-    "index = df[(df[defs.QUESTION_3].isin([defs.ANSWER_3_3, defs.ANSWER_3_4, defs.ANSWER_3_5])) & (df[defs.QUESTION_4].notnull())].index\n",
+    "index = df[(df[defs.QUESTION_3].isin([defs.ANSWER_3_3, defs.ANSWER_3_4, defs.ANSWER_3_5])) & (df[defs.QUESTION_4].notna())].index\n",
     "drop_df = drop_df.drop(index=index)"
    ]
   },
@@ -1131,9 +1131,9 @@
     }
    ],
    "source": [
-    "num = df.loc[df[defs.QUESTION_6] == defs.YES, defs.QUESTION_7].isnull().sum()\n",
+    "num = df.loc[df[defs.QUESTION_6] == defs.YES, defs.QUESTION_7].isna().sum()\n",
     "print(f'Имеют в Признаке 6 \"да\", но НЕ ИМЕЮТ значения в Признаке 7 - {num} шт.')\n",
-    "num = df.loc[df[defs.QUESTION_6] == defs.NO, defs.QUESTION_7].notnull().sum()\n",
+    "num = df.loc[df[defs.QUESTION_6] == defs.NO, defs.QUESTION_7].notna().sum()\n",
     "print(f'Имеют в Признаке 6 \"нет\", но ИМЕЮТ значения в Признаке 7 - {num} шт.')"
    ]
   },
@@ -1144,7 +1144,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "index = df[(df[defs.QUESTION_6] == defs.NO) & (df[defs.QUESTION_7].notnull())].index\n",
+    "index = df[(df[defs.QUESTION_6] == defs.NO) & (df[defs.QUESTION_7].notna())].index\n",
     "drop_df = drop_df.drop(index=index)"
    ]
   },
@@ -1174,9 +1174,9 @@
     }
    ],
    "source": [
-    "num = df.loc[df[defs.QUESTION_8] == defs.YES, defs.QUESTION_9].isnull().sum()\n",
+    "num = df.loc[df[defs.QUESTION_8] == defs.YES, defs.QUESTION_9].isna().sum()\n",
     "print(f'Имеют в Признаке 8 \"да\", но НЕ ИМЕЮТ значения в Признаке 9 - {num} шт.')\n",
-    "num = df.loc[df[defs.QUESTION_8] == defs.NO, defs.QUESTION_9].notnull().sum()\n",
+    "num = df.loc[df[defs.QUESTION_8] == defs.NO, defs.QUESTION_9].notna().sum()\n",
     "print(f'Имеют в Признаке 8 \"нет\", но ИМЕЮТ значения в Признаке 9 - {num} шт.')"
    ]
   },
@@ -1187,7 +1187,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "index = df[(df[defs.QUESTION_8] == defs.NO) & (df[defs.QUESTION_9].notnull())].index\n",
+    "index = df[(df[defs.QUESTION_8] == defs.NO) & (df[defs.QUESTION_9].notna())].index\n",
     "index = index.intersection(drop_df.index)\n",
     "drop_df = drop_df.drop(index=index)"
    ]
@@ -1247,9 +1247,9 @@
     }
    ],
    "source": [
-    "num = df.loc[df[defs.QUESTION_10] == defs.YES, defs.QUESTION_11].isnull().sum()\n",
+    "num = df.loc[df[defs.QUESTION_10] == defs.YES, defs.QUESTION_11].isna().sum()\n",
     "print(f'Имеют в Признаке 10 \"да\", но НЕ ИМЕЮТ значения в Признаке 11 - {num} шт.')\n",
-    "num = df.loc[df[defs.QUESTION_10] == defs.NO, defs.QUESTION_11].notnull().sum()\n",
+    "num = df.loc[df[defs.QUESTION_10] == defs.NO, defs.QUESTION_11].notna().sum()\n",
     "print(f'Имеют в Признаке 10 \"нет\", но ИМЕЮТ значения в Признаке 11 - {num} шт.')"
    ]
   },
@@ -1260,7 +1260,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "index = df[(df[defs.QUESTION_10] == defs.NO) & (df[defs.QUESTION_11].notnull())].index\n",
+    "index = df[(df[defs.QUESTION_10] == defs.NO) & (df[defs.QUESTION_11].notna())].index\n",
     "index = index.intersection(drop_df.index)\n",
     "drop_df = drop_df.drop(index=index)"
    ]
@@ -1289,9 +1289,9 @@
     }
    ],
    "source": [
-    "num = df.loc[df[defs.QUESTION_3].isin([defs.ANSWER_3_1, defs.ANSWER_3_2]), defs.QUESTION_20].isnull().sum()\n",
+    "num = df.loc[df[defs.QUESTION_3].isin([defs.ANSWER_3_1, defs.ANSWER_3_2]), defs.QUESTION_20].isna().sum()\n",
     "print(f'Имеют в Признаке 3 \"замужем\"/\"имею гражданского супруга\", но НЕ ИМЕЮТ значения в Признаке 20 - {num} шт.')\n",
-    "num = df.loc[df[defs.QUESTION_3].isin([defs.ANSWER_3_3, defs.ANSWER_3_4, defs.ANSWER_3_5]), defs.QUESTION_20].notnull().sum()\n",
+    "num = df.loc[df[defs.QUESTION_3].isin([defs.ANSWER_3_3, defs.ANSWER_3_4, defs.ANSWER_3_5]), defs.QUESTION_20].notna().sum()\n",
     "print(f'Имеют в Признаке 3 \"одинока\"/\"разведена\"/\"вдова\", но ИМЕЮТ значения в Признаке 20 - {num} шт.')"
    ]
   },
@@ -1302,10 +1302,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "index = df[(df[defs.QUESTION_3].isin([defs.ANSWER_3_1, defs.ANSWER_3_2])) & (df[defs.QUESTION_20].isnull())].index\n",
+    "index = df[(df[defs.QUESTION_3].isin([defs.ANSWER_3_1, defs.ANSWER_3_2])) & (df[defs.QUESTION_20].isna())].index\n",
     "index = index.intersection(drop_df.index)\n",
     "drop_df = drop_df.drop(index=index)\n",
-    "index = df[(df[defs.QUESTION_3].isin([defs.ANSWER_3_3, defs.ANSWER_3_4, defs.ANSWER_3_5])) & (df[defs.QUESTION_20].notnull())].index\n",
+    "index = df[(df[defs.QUESTION_3].isin([defs.ANSWER_3_3, defs.ANSWER_3_4, defs.ANSWER_3_5])) & (df[defs.QUESTION_20].notna())].index\n",
     "index = index.intersection(drop_df.index)\n",
     "drop_df = drop_df.drop(index=index)"
    ]
@@ -1334,9 +1334,9 @@
     }
    ],
    "source": [
-    "num = df.loc[df[defs.QUESTION_23] == defs.ANSWER_23_1, defs.QUESTION_24].isnull().sum()\n",
+    "num = df.loc[df[defs.QUESTION_23] == defs.ANSWER_23_1, defs.QUESTION_24].isna().sum()\n",
     "print(f'Имеют в Признаке 23 \"многоквартирный дом\", но НЕ ИМЕЮТ значения в Признаке 24 - {num} шт.')\n",
-    "num = df.loc[(df[defs.QUESTION_23].isin([defs.ANSWER_23_2, defs.ANSWER_23_3])), defs.QUESTION_24].notnull().sum()\n",
+    "num = df.loc[(df[defs.QUESTION_23].isin([defs.ANSWER_23_2, defs.ANSWER_23_3])), defs.QUESTION_24].notna().sum()\n",
     "print(f'Имеют в Признаке 23 \"таунхаус\"/\"собственный дом\", но ИМЕЮТ значения в Признаке 24 - {num} шт.')"
    ]
   },
@@ -1347,10 +1347,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "index = df[(df[defs.QUESTION_23] == defs.ANSWER_23_1) & (df[defs.QUESTION_24].isnull())].index\n",
+    "index = df[(df[defs.QUESTION_23] == defs.ANSWER_23_1) & (df[defs.QUESTION_24].isna())].index\n",
     "index = index.intersection(drop_df.index)\n",
     "drop_df = drop_df.drop(index=index)\n",
-    "index = df[(df[defs.QUESTION_23].isin([defs.ANSWER_23_2, defs.ANSWER_23_3])) & (df[defs.QUESTION_24].notnull())].index\n",
+    "index = df[(df[defs.QUESTION_23].isin([defs.ANSWER_23_2, defs.ANSWER_23_3])) & (df[defs.QUESTION_24].notna())].index\n",
     "index = index.intersection(drop_df.index)\n",
     "drop_df = drop_df.drop(index=index)"
    ]
@@ -1379,9 +1379,9 @@
     }
    ],
    "source": [
-    "num = df.loc[df[defs.QUESTION_27].isin([defs.ANSWER_27_1, defs.ANSWER_27_2]), defs.QUESTION_26].isnull().sum()\n",
+    "num = df.loc[df[defs.QUESTION_27].isin([defs.ANSWER_27_1, defs.ANSWER_27_2]), defs.QUESTION_26].isna().sum()\n",
     "print(f'Имеют в Признаке 27 \"полный рабочий день\"/\"частичная занятость\", но НЕ ИМЕЮТ значения в Признаке 26 - {num} шт.')\n",
-    "num = df.loc[df[defs.QUESTION_27].isin([defs.ANSWER_27_3, defs.ANSWER_27_4]), defs.QUESTION_26].notnull().sum()\n",
+    "num = df.loc[df[defs.QUESTION_27].isin([defs.ANSWER_27_3, defs.ANSWER_27_4]), defs.QUESTION_26].notna().sum()\n",
     "print(f'Имеют в Признаке 27 \"я работаю из дома\"/\"я не работаю\", но ИМЕЮТ значения в Признаке 26 - {num} шт.')"
    ]
   },
@@ -1392,10 +1392,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "index = df[(df[defs.QUESTION_27].isin([defs.ANSWER_27_1, defs.ANSWER_27_2])) & (df[defs.QUESTION_26].isnull())].index\n",
+    "index = df[(df[defs.QUESTION_27].isin([defs.ANSWER_27_1, defs.ANSWER_27_2])) & (df[defs.QUESTION_26].isna())].index\n",
     "index = index.intersection(drop_df.index)\n",
     "drop_df = drop_df.drop(index=index)\n",
-    "index = df[(df[defs.QUESTION_27].isin([defs.ANSWER_27_3, defs.ANSWER_27_4])) & (df[defs.QUESTION_26].notnull())].index\n",
+    "index = df[(df[defs.QUESTION_27].isin([defs.ANSWER_27_3, defs.ANSWER_27_4])) & (df[defs.QUESTION_26].notna())].index\n",
     "index = index.intersection(drop_df.index)\n",
     "drop_df = drop_df.drop(index=index)"
    ]
