--- a/Neural Network.ipynb
+++ b/Neural Network.ipynb
@@ -86,8 +86,8 @@
     "def standanrdized(df, feature_name, *, fill_nan=0):\n",
     "    \"\"\"Возвращает df со стандартизированным столбцом feature_name.\"\"\"\n",
     "    df = df.copy()\n",
-    "    df.loc[df[feature_name].notnull(), feature_name] = (df[feature_name] - df[feature_name].mean()) / df[feature_name].std()\n",
-    "    df.loc[df[feature_name].isnull(), feature_name] = fill_nan\n",
+    "    df.loc[df[feature_name].notna(), feature_name] = (df[feature_name] - df[feature_name].mean()) / df[feature_name].std()\n",
+    "    df.loc[df[feature_name].isna(), feature_name] = fill_nan\n",
     "    return df"
    ]
   },
@@ -101,8 +101,8 @@
     "def normalized(df, feature_name, *, fill_nan=0):\n",
     "    \"\"\"Возвращает df с нормализованным столбцом feature_name.\"\"\"\n",
     "    df = df.copy()\n",
-    "    df.loc[df[feature_name].notnull(), feature_name] = (df[feature_name] - df[feature_name].min()) / (df[feature_name].max() - df[feature_name].min())\n",
-    "    df.loc[df[feature_name].isnull(), feature_name] = fill_nan\n",
+    "    df.loc[df[feature_name].notna(), feature_name] = (df[feature_name] - df[feature_name].min()) / (df[feature_name].max() - df[feature_name].min())\n",
+    "    df.loc[df[feature_name].isna(), feature_name] = fill_nan\n",
     "    return df"
    ]
   },
