узнал про наличие метода unique()

--- a/DecisionTreeClassifier.ipynb
+++ b/DecisionTreeClassifier.ipynb
@@ -289,7 +289,7 @@
    "outputs": [],
    "source": [
     "for feature in defs.BINARY_FEATURES:\n",
-    "    if np.NaN in set(X[feature]):\n",
+    "    if X[feature].isna().sum():\n",
     "        X.replace({feature: {np.NaN: -1}}, inplace=True)\n",
     "    X.replace({feature: {defs.YES: 1, defs.NO: 0}}, inplace=True)"
    ]
@@ -666,7 +666,7 @@
     "    Y_OHE = pd.get_dummies(Y)\n",
     "    for class_ in Y_OHE.columns:\n",
     "        tmp = pd.DataFrame(index=X.index)\n",
-    "        feature_values = set(X[feature_name])\n",
+    "        feature_values = X[feature_name].unique()\n",
     "        for feature_value in feature_values:\n",
     "            if feature_value is np.NaN:\n",
     "                a = X.loc[X[feature_name].isna()].index  # точки с NaN\n",
