--- a/EDA.ipynb
+++ b/EDA.ipynb
@@ -1598,7 +1598,7 @@
    "outputs": [],
    "source": [
     "for feature in defs.BINARY_FEATURES:\n",
-    "    if np.NaN in set(df[feature]):\n",
+    "    if df[feature].isna().sum():\n",
     "        df.replace({feature: {np.NaN: -1}}, inplace=True)\n",
     "    df.replace({feature: {defs.YES: 1, defs.NO: 0}}, inplace=True)"
    ]
