--- a/ETL.ipynb
+++ b/ETL.ipynb
@@ -748,7 +748,7 @@
     {
      "data": {
       "text/plain": [
-       "{1, 2, 3, 4, 5}"
+       "array([2, 4, 1, 3, 5], dtype=int64)"
       ]
      },
      "execution_count": 6,
@@ -757,7 +757,7 @@
     }
    ],
    "source": [
-    "set(df[defs.QUESTION_3].tolist())"
+    "df[defs.QUESTION_3].unique()"
    ]
   },
   {
@@ -796,83 +796,18 @@
     {
      "data": {
       "text/plain": [
-       "{'-',\n",
-       " 0,\n",
-       " '0 лет',\n",
-       " 1,\n",
-       " '1 год',\n",
-       " '1.5 года',\n",
-       " '10 лет',\n",
-       " 11,\n",
-       " '11 лет',\n",
-       " '12 лет',\n",
-       " '13 лет',\n",
-       " '14 лет',\n",
-       " '15 лет',\n",
-       " '16 лет',\n",
-       " '17 лет',\n",
-       " '18 лет',\n",
-       " '19 лет',\n",
-       " '2 года',\n",
-       " '2 года ',\n",
-       " '2 месяца',\n",
-       " '2,5 года',\n",
-       " '20 лет',\n",
-       " 21,\n",
-       " '21 год',\n",
-       " '21 год ',\n",
-       " '22 года',\n",
-       " '22 года ',\n",
-       " '23 года',\n",
-       " '24 года',\n",
-       " '25 лет',\n",
-       " '26 лет',\n",
-       " '26 лет ',\n",
-       " '27 лет',\n",
-       " '27 лет ',\n",
-       " '28 лет',\n",
-       " '29 лет',\n",
-       " '3 года',\n",
-       " '3 месяца',\n",
-       " 30,\n",
-       " '30 лет',\n",
-       " '31 год',\n",
-       " '32 года',\n",
-       " '33 года',\n",
-       " '34 года',\n",
-       " '35 лет',\n",
-       " 36,\n",
-       " '36 лет',\n",
-       " '37 лет',\n",
-       " '38 лет',\n",
-       " '39 лет',\n",
-       " '4 года',\n",
-       " '40 лет',\n",
-       " '41 год',\n",
-       " '42 года',\n",
-       " '42 года ',\n",
-       " '43 года',\n",
-       " '44 года',\n",
-       " '45 лет',\n",
-       " '46 лет',\n",
-       " '47 лет',\n",
-       " '48 лет',\n",
-       " '49 лет',\n",
-       " '5 лет',\n",
-       " '5,5 лет',\n",
-       " '50 лет',\n",
-       " '50 лет ',\n",
-       " '51 год ',\n",
-       " '52 года',\n",
-       " '53 года',\n",
-       " '54 года',\n",
-       " '56 лет',\n",
-       " '58 лет',\n",
-       " '6 лет',\n",
-       " '7 лет',\n",
-       " '8 лет',\n",
-       " '9 лет',\n",
-       " '?'}"
+       "array([21, '-', 11, '12 лет', '5,5 лет', '1 год', '21 год', 0, '3 года',\n",
+       "       '37 лет', '45 лет', '10 лет', '40 лет', '?', '13 лет', '20 лет',\n",
+       "       '24 года', '4 года', '2 года', '5 лет', '17 лет', '15 лет',\n",
+       "       '25 лет', '2 месяца', '29 лет', '19 лет', '21 год ', '30 лет',\n",
+       "       '43 года', '7 лет', '50 лет ', '6 лет', '32 года', '23 года',\n",
+       "       '11 лет', '36 лет', '27 лет', '41 год', '42 года', '2 года ',\n",
+       "       '26 лет ', '39 лет', '47 лет', '42 года ', '8 лет', '2,5 года',\n",
+       "       '33 года', '34 года', 36, 30, '0 лет', '14 лет', '22 года',\n",
+       "       '1.5 года', '18 лет', '58 лет', '22 года ', 1, '28 лет', '26 лет',\n",
+       "       '16 лет', '9 лет', '38 лет', '46 лет', '50 лет', '56 лет',\n",
+       "       '54 года', '53 года', '52 года', '51 год ', '48 лет', '3 месяца',\n",
+       "       '27 лет ', '35 лет', '49 лет', '44 года', '31 год'], dtype=object)"
       ]
      },
      "execution_count": 8,
@@ -881,7 +816,7 @@
     }
    ],
    "source": [
-    "set(df[defs.QUESTION_4].tolist())"
+    "df[defs.QUESTION_4].unique()"
    ]
   },
   {
@@ -970,7 +905,7 @@
     {
      "data": {
       "text/plain": [
-       "{'-', 1, 2, 3, 4, 5}"
+       "array([1, '-', 3, 2, 5, 4], dtype=object)"
       ]
      },
      "execution_count": 12,
@@ -979,7 +914,7 @@
     }
    ],
    "source": [
-    "set(df[defs.QUESTION_5].tolist())"
+    "df[defs.QUESTION_5].unique()"
    ]
   },
   {
@@ -1019,7 +954,7 @@
     {
      "data": {
       "text/plain": [
-       "{'да', 'нет', 'нет '}"
+       "array(['да', 'нет', 'нет '], dtype=object)"
       ]
      },
      "execution_count": 14,
@@ -1028,7 +963,7 @@
     }
    ],
    "source": [
-    "set(df[defs.QUESTION_6].tolist())"
+    "df[defs.QUESTION_6].unique()"
    ]
   },
   {
@@ -1063,7 +998,7 @@
     {
      "data": {
       "text/plain": [
-       "{'-', 1, 2, 3, 4, 5, 6}"
+       "array([2, 3, 1, 4, '-', 5, 6], dtype=object)"
       ]
      },
      "execution_count": 16,
@@ -1072,7 +1007,7 @@
     }
    ],
    "source": [
-    "set(df[defs.QUESTION_7].tolist())"
+    "df[defs.QUESTION_7].unique()"
    ]
   },
   {
@@ -1113,7 +1048,7 @@
     {
      "data": {
       "text/plain": [
-       "{' нет', 'да', 'да ', 'нет', 'нет '}"
+       "array(['да', 'нет ', ' нет', 'нет', 'да '], dtype=object)"
       ]
      },
      "execution_count": 18,
@@ -1122,7 +1057,7 @@
     }
    ],
    "source": [
-    "set(df[defs.QUESTION_8].tolist())"
+    "df[defs.QUESTION_8].unique()"
    ]
   },
   {
@@ -1159,7 +1094,7 @@
     {
      "data": {
       "text/plain": [
-       "{' -', '-', 0, 1, 2, 3, 4, 6}"
+       "array([1, 2, 0, '-', 4, 3, 6, ' -'], dtype=object)"
       ]
      },
      "execution_count": 20,
@@ -1168,7 +1103,7 @@
     }
    ],
    "source": [
-    "set(df[defs.QUESTION_9].tolist())"
+    "df[defs.QUESTION_9].unique()"
    ]
   },
   {
@@ -1205,7 +1140,7 @@
     {
      "data": {
       "text/plain": [
-       "{' да', '-', 'да', 'да ', 'дв', 'нет'}"
+       "array(['да', 'нет', '-', ' да', 'дв', 'да '], dtype=object)"
       ]
      },
      "execution_count": 22,
@@ -1214,7 +1149,7 @@
     }
    ],
    "source": [
-    "set(df[defs.QUESTION_10].tolist())"
+    "df[defs.QUESTION_10].unique()"
    ]
   },
   {
@@ -1252,7 +1187,7 @@
     {
      "data": {
       "text/plain": [
-       "{'-', 1, 2, 3, 4, 5, nan}"
+       "array([1, 2, '-', 3, 4, nan, 5], dtype=object)"
       ]
      },
      "execution_count": 24,
@@ -1261,7 +1196,7 @@
     }
    ],
    "source": [
-    "set(df[defs.QUESTION_11].tolist())"
+    "df[defs.QUESTION_11].unique()"
    ]
   },
   {
@@ -1302,7 +1237,7 @@
     {
      "data": {
       "text/plain": [
-       "{nan, 1.0, 2.0, 3.0, 4.0, nan}"
+       "array([ 3.,  1.,  4.,  2., nan])"
       ]
      },
      "execution_count": 26,
@@ -1311,7 +1246,7 @@
     }
    ],
    "source": [
-    "set(df[defs.QUESTION_12].tolist())"
+    "df[defs.QUESTION_12].unique()"
    ]
   },
   {
@@ -1349,7 +1284,7 @@
     {
      "data": {
       "text/plain": [
-       "{nan, 1.0, 2.0, 3.0, 4.0, nan, 5.0, 6.0, 7.0, 33.0}"
+       "array([ 2.,  1.,  3.,  4.,  6., nan,  7.,  5., 33.])"
       ]
      },
      "execution_count": 28,
@@ -1358,7 +1293,7 @@
     }
    ],
    "source": [
-    "set(df[defs.QUESTION_13].tolist())"
+    "df[defs.QUESTION_13].unique()"
    ]
   },
   {
@@ -1400,7 +1335,7 @@
     {
      "data": {
       "text/plain": [
-       "{nan, 1.0, 2.0, 3.0, 4.0, nan}"
+       "array([ 2.,  3.,  4.,  1., nan])"
       ]
      },
      "execution_count": 30,
@@ -1409,7 +1344,7 @@
     }
    ],
    "source": [
-    "set(df[defs.QUESTION_14].tolist())"
+    "df[defs.QUESTION_14].unique()"
    ]
   },
   {
@@ -1447,7 +1382,7 @@
     {
      "data": {
       "text/plain": [
-       "{'-', nan, 'да', 'да ', 'ла', 'нет'}"
+       "array(['да', 'нет', '-', nan, 'да ', 'ла'], dtype=object)"
       ]
      },
      "execution_count": 32,
@@ -1456,7 +1391,7 @@
     }
    ],
    "source": [
-    "set(df[defs.QUESTION_15].tolist())"
+    "df[defs.QUESTION_15].unique()"
    ]
   },
   {
@@ -1493,7 +1428,7 @@
     {
      "data": {
       "text/plain": [
-       "{'-', 0, 1, 2, 3, 4, 5, 6, 7, nan}"
+       "array(['-', 4, 1, 0, 5, 2, 3, 7, 6, nan], dtype=object)"
       ]
      },
      "execution_count": 34,
@@ -1502,7 +1437,7 @@
     }
    ],
    "source": [
-    "set(df[defs.QUESTION_16].tolist())"
+    "df[defs.QUESTION_16].unique()"
    ]
   },
   {
@@ -1537,7 +1472,7 @@
     {
      "data": {
       "text/plain": [
-       "{'-', 0, 1, 2, 3, 4, 5, 6, 7, nan}"
+       "array(['-', 4, 3, 0, 2, 5, 7, 1, nan, 6], dtype=object)"
       ]
      },
      "execution_count": 36,
@@ -1546,7 +1481,7 @@
     }
    ],
    "source": [
-    "set(df[defs.QUESTION_17].tolist())"
+    "df[defs.QUESTION_17].unique()"
    ]
   },
   {
@@ -1581,7 +1516,7 @@
     {
      "data": {
       "text/plain": [
-       "{'-', 0.0, 1.0, 2.0, 3.0, 4.0, 5.0, 6.0, 7.0, nan, nan}"
+       "array([7.0, 3.0, 5.0, 2.0, 4.0, 0.0, 1.0, 6.0, nan, '-'], dtype=object)"
       ]
      },
      "execution_count": 38,
@@ -1590,7 +1525,7 @@
     }
    ],
    "source": [
-    "set(df[defs.QUESTION_18].tolist())"
+    "df[defs.QUESTION_18].unique()"
    ]
   },
   {
@@ -1633,7 +1568,7 @@
     {
      "data": {
       "text/plain": [
-       "{nan, 1.0, 2.0, 3.0, 4.0, nan}"
+       "array([ 2.,  3.,  1., nan,  4.])"
       ]
      },
      "execution_count": 40,
@@ -1642,7 +1577,7 @@
     }
    ],
    "source": [
-    "set(df[defs.QUESTION_19].tolist())"
+    "df[defs.QUESTION_19].unique()"
    ]
   },
   {
@@ -1680,7 +1615,7 @@
     {
      "data": {
       "text/plain": [
-       "{'-', 1, 2, 3, 4, nan}"
+       "array([2, '-', 3, 1, nan, 4], dtype=object)"
       ]
      },
      "execution_count": 42,
@@ -1689,7 +1624,7 @@
     }
    ],
    "source": [
-    "set(df[defs.QUESTION_20].tolist())"
+    "df[defs.QUESTION_20].unique()"
    ]
   },
   {
@@ -1728,108 +1663,22 @@
     {
      "data": {
       "text/plain": [
-       "{'-',\n",
-       " 0.5,\n",
-       " '1 год',\n",
-       " '1 год ',\n",
-       " '1 месяц',\n",
-       " '1,5 ГОДА',\n",
-       " '10 лет',\n",
-       " '10 лет ',\n",
-       " 11,\n",
-       " '11 лет',\n",
-       " '11 лет ',\n",
-       " '12 лет',\n",
-       " '12 лет ',\n",
-       " '13 лет',\n",
-       " 14,\n",
-       " '14 лет',\n",
-       " '15 лет',\n",
-       " '15 лет ',\n",
-       " '16 лет',\n",
-       " '17 лет',\n",
-       " '18 лет',\n",
-       " '19 лет',\n",
-       " '2 года',\n",
-       " '2 года ',\n",
-       " '2,5 года',\n",
-       " '2.5 года',\n",
-       " '20 лет',\n",
-       " '21 год',\n",
-       " '22 года',\n",
-       " '23 года',\n",
-       " '24 года',\n",
-       " '25 лет',\n",
-       " '26 лет',\n",
-       " '27 лет',\n",
-       " '28 года',\n",
-       " '28 лет',\n",
-       " '29 лет',\n",
-       " '3 года',\n",
-       " '3 года ',\n",
-       " '3.5 года',\n",
-       " 30,\n",
-       " '30 лет',\n",
-       " '30 лет ',\n",
-       " '31 год',\n",
-       " '32 года',\n",
-       " '33 года',\n",
-       " '33 года ',\n",
-       " 34,\n",
-       " '34 года',\n",
-       " '35 лет',\n",
-       " '36 лет',\n",
-       " '37 лет',\n",
-       " '38 лет',\n",
-       " '39 лет',\n",
-       " '4 года',\n",
-       " '4 года ',\n",
-       " '4 лет',\n",
-       " '40 лет',\n",
-       " '41 год',\n",
-       " 42,\n",
-       " '42 года',\n",
-       " '42года',\n",
-       " '43 года',\n",
-       " '43 года ',\n",
-       " '44 года',\n",
-       " '45 лет',\n",
-       " '45 лет ',\n",
-       " '46 лет',\n",
-       " '47 лет',\n",
-       " '48 лет',\n",
-       " '49 лет',\n",
-       " '5 лет',\n",
-       " '50 лет',\n",
-       " '52 года',\n",
-       " '53 года',\n",
-       " '54 года',\n",
-       " '55 лет',\n",
-       " '55 лет ',\n",
-       " '56 лет',\n",
-       " '57 лет',\n",
-       " '58 лет',\n",
-       " '59 лет',\n",
-       " '6 лет',\n",
-       " '6 месяцев',\n",
-       " '60 лет',\n",
-       " '61 год',\n",
-       " '61 год ',\n",
-       " '63 года',\n",
-       " '64 года',\n",
-       " '65 лет',\n",
-       " '66 лет',\n",
-       " '67 лет',\n",
-       " 7,\n",
-       " '7 лет',\n",
-       " '72 года',\n",
-       " '73 года',\n",
-       " '77 лет',\n",
-       " '79 лет',\n",
-       " '8 лет',\n",
-       " '9 лет',\n",
-       " '?',\n",
-       " nan}"
+       "array([7, 11, 34, '50 лет', '4 года ', '29 лет', '18 лет', '22 года',\n",
+       "       '1 год', '5 лет', '35 лет', '20 лет', '38 лет', '17 лет', '47 лет',\n",
+       "       '32 года', '15 лет', '25 лет', '41 год', '7 лет', '12 лет',\n",
+       "       '30 лет ', '2 года', '3 года', '?', '52 года', '10 лет', '2 года ',\n",
+       "       '49 лет', 0.5, '42 года', '14 лет', '40 лет', '6 лет', '-',\n",
+       "       '8 лет', '34 года', '45 лет', '55 лет ', '26 лет', '61 год ', nan,\n",
+       "       '28 лет', '3.5 года', '43 года ', '15 лет ', '42года', '67 лет',\n",
+       "       '24 года', '53 года', '33 года ', '12 лет ', '11 лет', '13 лет',\n",
+       "       '37 лет', '21 год', '2,5 года', '36 лет', '27 лет', '31 год',\n",
+       "       '16 лет', '79 лет', '64 года', '54 года', '6 месяцев', 14, 42, 30,\n",
+       "       '9 лет', '4 года', '33 года', '30 лет', '19 лет', '23 года',\n",
+       "       '56 лет', '44 года', '1,5 ГОДА', '45 лет ', '48 лет', '3 года ',\n",
+       "       '11 лет ', '39 лет', '43 года', '1 месяц', '4 лет', '28 года',\n",
+       "       '46 лет', '55 лет', '2.5 года', '66 лет', '10 лет ', '58 лет',\n",
+       "       '72 года', '73 года', '57 лет', '59 лет', '60 лет', '77 лет',\n",
+       "       '1 год ', '63 года', '61 год', '65 лет'], dtype=object)"
       ]
      },
      "execution_count": 44,
@@ -1838,7 +1687,7 @@
     }
    ],
    "source": [
-    "set(df[defs.QUESTION_22].tolist())"
+    "df[defs.QUESTION_22].unique()"
    ]
   },
   {
@@ -1898,7 +1747,7 @@
     {
      "data": {
       "text/plain": [
-       "{nan, 1.0, 2.0, 3.0, nan}"
+       "array([ 1.,  2.,  3., nan])"
       ]
      },
      "execution_count": 47,
@@ -1907,7 +1756,7 @@
     }
    ],
    "source": [
-    "set(df[defs.QUESTION_23].tolist())"
+    "df[defs.QUESTION_23].unique()"
    ]
   },
   {
@@ -1944,33 +1793,8 @@
     {
      "data": {
       "text/plain": [
-       "{'-',\n",
-       " 0,\n",
-       " 1,\n",
-       " 10,\n",
-       " 11,\n",
-       " 12,\n",
-       " 13,\n",
-       " 14,\n",
-       " 15,\n",
-       " 16,\n",
-       " 17,\n",
-       " 18,\n",
-       " 2,\n",
-       " 20,\n",
-       " 22,\n",
-       " 23,\n",
-       " 25,\n",
-       " 3,\n",
-       " 4,\n",
-       " 40,\n",
-       " 5,\n",
-       " 6,\n",
-       " 7,\n",
-       " 8,\n",
-       " 9,\n",
-       " '?',\n",
-       " nan}"
+       "array([12, 5, 3, 4, 2, 9, 1, 13, 8, 11, 14, 16, 6, '-', 7, 23, 17, nan,\n",
+       "       15, 20, 22, 10, 0, 40, '?', 25, 18], dtype=object)"
       ]
      },
      "execution_count": 49,
@@ -1979,7 +1803,7 @@
     }
    ],
    "source": [
-    "set(df[defs.QUESTION_24].tolist())"
+    "df[defs.QUESTION_24].unique()"
    ]
   },
   {
@@ -2039,7 +1863,7 @@
     {
      "data": {
       "text/plain": [
-       "{'-', 1.0, 2.0, 3.0, nan, nan}"
+       "array([1.0, 3.0, 2.0, nan, '-'], dtype=object)"
       ]
      },
      "execution_count": 52,
@@ -2048,7 +1872,7 @@
     }
    ],
    "source": [
-    "set(df[defs.QUESTION_25].tolist())"
+    "df[defs.QUESTION_25].unique()"
    ]
   },
   {
@@ -2086,7 +1910,7 @@
     {
      "data": {
       "text/plain": [
-       "{'-', 1, 2, 3, 4, nan}"
+       "array(['-', 2, 1, 3, nan, 4], dtype=object)"
       ]
      },
      "execution_count": 54,
@@ -2095,7 +1919,7 @@
     }
    ],
    "source": [
-    "set(df[defs.QUESTION_26].tolist())"
+    "df[defs.QUESTION_26].unique()"
    ]
   },
   {
@@ -2134,7 +1958,7 @@
     {
      "data": {
       "text/plain": [
-       "{'-', 1, 2, 3, 4, nan}"
+       "array([4, 1, 3, 2, '-', nan], dtype=object)"
       ]
      },
      "execution_count": 56,
@@ -2143,7 +1967,7 @@
     }
    ],
    "source": [
-    "set(df[defs.QUESTION_27].tolist())"
+    "df[defs.QUESTION_27].unique()"
    ]
   },
   {
@@ -2182,7 +2006,7 @@
     {
      "data": {
       "text/plain": [
-       "{nan, 1.0, 2.0, 3.0, nan, 4.0}"
+       "array([ 1.,  2.,  3., nan,  4.])"
       ]
      },
      "execution_count": 58,
@@ -2191,7 +2015,7 @@
     }
    ],
    "source": [
-    "set(df[defs.QUESTION_28].tolist())"
+    "df[defs.QUESTION_28].unique()"
    ]
   },
   {
@@ -2229,7 +2053,7 @@
     {
      "data": {
       "text/plain": [
-       "{nan, 1.0, 2.0, 3.0, 4.0, nan}"
+       "array([ 1.,  3.,  2.,  4., nan])"
       ]
      },
      "execution_count": 60,
@@ -2238,7 +2062,7 @@
     }
    ],
    "source": [
-    "set(df[defs.QUESTION_29].tolist())"
+    "df[defs.QUESTION_29].unique()"
    ]
   },
   {
@@ -2276,7 +2100,7 @@
     {
      "data": {
       "text/plain": [
-       "{nan, 'да', 'не т', 'нет', 'нет '}"
+       "array(['нет', 'да', nan, 'нет ', 'не т'], dtype=object)"
       ]
      },
      "execution_count": 62,
@@ -2285,7 +2109,7 @@
     }
    ],
    "source": [
-    "set(df[defs.QUESTION_30].tolist())"
+    "df[defs.QUESTION_30].unique()"
    ]
   },
   {
@@ -2321,7 +2145,7 @@
     {
      "data": {
       "text/plain": [
-       "{0, 1, 2, 3, 4, 6}"
+       "array([1, 2, 0, 4, 3, 6], dtype=int64)"
       ]
      },
      "execution_count": 64,
@@ -2330,7 +2154,7 @@
     }
    ],
    "source": [
-    "set(df[defs.QUESTION_31].tolist())"
+    "df[defs.QUESTION_31].unique()"
    ]
   },
   {
@@ -2350,7 +2174,7 @@
     {
      "data": {
       "text/plain": [
-       "{0, 1, 2, 3, 4, 5, 6, 7, 8, 12}"
+       "array([ 0,  2,  5,  4,  1,  3,  8,  7,  6, 12], dtype=int64)"
       ]
      },
      "execution_count": 65,
@@ -2359,7 +2183,7 @@
     }
    ],
    "source": [
-    "set(df[defs.QUESTION_32].tolist())"
+    "df[defs.QUESTION_32].unique()"
    ]
   },
   {
@@ -2379,7 +2203,8 @@
     {
      "data": {
       "text/plain": [
-       "{'НЕТ', 'да', 'да ', 'есть', 'есть ', 'ней', 'нет', 'нте'}"
+       "array(['да', 'нет', 'есть', 'есть ', 'НЕТ', 'да ', 'ней', 'нте'],\n",
+       "      dtype=object)"
       ]
      },
      "execution_count": 66,
@@ -2388,7 +2213,7 @@
     }
    ],
    "source": [
-    "set(df[defs.QUESTION_33].tolist())"
+    "df[defs.QUESTION_33].unique()"
    ]
   },
   {
@@ -2428,7 +2253,7 @@
     {
      "data": {
       "text/plain": [
-       "{'НЕТ', 'да', 'дв', 'есть', 'есть ', 'нет', 'нет '}"
+       "array(['нет', 'есть', 'нет ', 'НЕТ', 'есть ', 'да', 'дв'], dtype=object)"
       ]
      },
      "execution_count": 68,
@@ -2437,7 +2262,7 @@
     }
    ],
    "source": [
-    "set(df[defs.QUESTION_34].tolist())"
+    "df[defs.QUESTION_34].unique()"
    ]
   },
   {
@@ -2476,7 +2301,7 @@
     {
      "data": {
       "text/plain": [
-       "{' нет', 'да', 'есть', 'нет'}"
+       "array(['нет', 'есть', 'да', ' нет'], dtype=object)"
       ]
      },
      "execution_count": 70,
@@ -2485,7 +2310,7 @@
     }
    ],
    "source": [
-    "set(df[defs.QUESTION_35].tolist())"
+    "df[defs.QUESTION_35].unique()"
    ]
   },
   {
