сделал более лаконичными replace()

--- a/DecisionTreeClassifier.ipynb
+++ b/DecisionTreeClassifier.ipynb
@@ -105,10 +105,12 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "X.replace({defs.QUESTION_2: {np.NaN: -1}}, inplace=True)\n",
-    "X.replace({defs.QUESTION_4: {np.NaN: -1}}, inplace=True)\n",
-    "X.replace({defs.QUESTION_22: {np.NaN: -1}}, inplace=True)\n",
-    "X.replace({defs.QUESTION_24: {np.NaN: -1}}, inplace=True)"
+    "X.replace({\n",
+    "    defs.QUESTION_2: {np.NaN: -1},\n",
+    "    defs.QUESTION_4: {np.NaN: -1},\n",
+    "    defs.QUESTION_22: {np.NaN: -1},\n",
+    "    defs.QUESTION_24: {np.NaN: -1},\n",
+    "}, inplace=True)"
    ]
   },
   {
@@ -135,10 +137,7 @@
     "        defs.ANSWER_5_3: 2,\n",
     "        defs.ANSWER_5_2: 3,\n",
     "        defs.ANSWER_5_1: 4,\n",
-    "    }\n",
-    "}, inplace=True)\n",
-    "\n",
-    "X.replace({\n",
+    "    },\n",
     "    defs.QUESTION_7:\n",
     "    {\n",
     "        np.NaN: -1,\n",
@@ -148,13 +147,11 @@
     "        defs.ANSWER_7_3: 3,\n",
     "        defs.ANSWER_7_2: 4,\n",
     "        defs.ANSWER_7_1: 5,\n",
-    "    }\n",
-    "}, inplace=True)\n",
-    "\n",
-    "X.replace({defs.QUESTION_9: {np.NaN: -1}}, inplace=True)\n",
-    "X[defs.QUESTION_9] = X[defs.QUESTION_9].astype('int64')\n",
-    "\n",
-    "X.replace({\n",
+    "    },\n",
+    "    defs.QUESTION_9:\n",
+    "    {\n",
+    "        np.NaN: -1,\n",
+    "    },\n",
     "    defs.QUESTION_11:\n",
     "    {\n",
     "        np.NaN: -1,\n",
@@ -164,10 +161,7 @@
     "        defs.ANSWER_11_3: 3,\n",
     "        defs.ANSWER_11_2: 4,\n",
     "        defs.ANSWER_11_1: 5,\n",
-    "    }\n",
-    "}, inplace=True)\n",
-    "\n",
-    "X.replace({\n",
+    "    },\n",
     "    defs.QUESTION_12:\n",
     "    {\n",
     "        np.NaN: -1,\n",
@@ -175,10 +169,7 @@
     "        defs.ANSWER_12_2: 1,\n",
     "        defs.ANSWER_12_3: 2,\n",
     "        defs.ANSWER_12_4: 3,\n",
-    "    }\n",
-    "}, inplace=True)\n",
-    "\n",
-    "X.replace({\n",
+    "    },\n",
     "    defs.QUESTION_13:\n",
     "    {\n",
     "        np.NaN: -1,\n",
@@ -189,10 +180,7 @@
     "        defs.ANSWER_13_3: 4,\n",
     "        defs.ANSWER_13_2: 5,\n",
     "        defs.ANSWER_13_1: 6,\n",
-    "    }\n",
-    "}, inplace=True)\n",
-    "\n",
-    "X.replace({\n",
+    "    },\n",
     "    defs.QUESTION_14:\n",
     "    {\n",
     "        np.NaN: -1,\n",
@@ -200,14 +188,19 @@
     "        defs.ANSWER_14_3: 1,\n",
     "        defs.ANSWER_14_2: 2,\n",
     "        defs.ANSWER_14_1: 3,\n",
-    "    }\n",
-    "}, inplace=True)\n",
-    "\n",
-    "X.replace({defs.QUESTION_16: {np.NaN: -1}}, inplace=True)\n",
-    "X.replace({defs.QUESTION_17: {np.NaN: -1}}, inplace=True)\n",
-    "X.replace({defs.QUESTION_18: {np.NaN: -1}}, inplace=True)\n",
-    "\n",
-    "X.replace({\n",
+    "    },\n",
+    "    defs.QUESTION_16:\n",
+    "    {\n",
+    "        np.NaN: -1,\n",
+    "    },\n",
+    "    defs.QUESTION_17:\n",
+    "    {\n",
+    "        np.NaN: -1,\n",
+    "    },\n",
+    "    defs.QUESTION_18:\n",
+    "    {\n",
+    "        np.NaN: -1,\n",
+    "    },\n",
     "    defs.QUESTION_19:\n",
     "    {\n",
     "        np.NaN: -1,\n",
@@ -215,10 +208,7 @@
     "        defs.ANSWER_19_20_2: 1,\n",
     "        defs.ANSWER_19_20_3: 2,\n",
     "        defs.ANSWER_19_20_4: 3,\n",
-    "    }\n",
-    "}, inplace=True)\n",
-    "\n",
-    "X.replace({\n",
+    "    },\n",
     "    defs.QUESTION_20:\n",
     "    {\n",
     "        np.NaN: -1,\n",
@@ -226,20 +216,14 @@
     "        defs.ANSWER_19_20_2: 1,\n",
     "        defs.ANSWER_19_20_3: 2,\n",
     "        defs.ANSWER_19_20_4: 3,\n",
-    "    }\n",
-    "}, inplace=True)\n",
-    "\n",
-    "X.replace({\n",
+    "    },\n",
     "    defs.QUESTION_26:\n",
     "    {\n",
     "        np.NaN: -1,\n",
     "        defs.ANSWER_26_1: 0,\n",
     "        defs.ANSWER_26_2: 1,\n",
     "        defs.ANSWER_26_3: 2,\n",
-    "    }\n",
-    "}, inplace=True)\n",
-    "\n",
-    "X.replace({\n",
+    "    },\n",
     "    defs.QUESTION_27:\n",
     "    {\n",
     "        np.NaN: -1,\n",
@@ -247,10 +231,7 @@
     "        defs.ANSWER_27_3: 1,\n",
     "        defs.ANSWER_27_2: 2,\n",
     "        defs.ANSWER_27_1: 3,\n",
-    "    }\n",
-    "}, inplace=True)\n",
-    "\n",
-    "X.replace({\n",
+    "    },\n",
     "    defs.QUESTION_28:\n",
     "    {\n",
     "        np.NaN: -1,\n",
@@ -258,10 +239,7 @@
     "        defs.ANSWER_28_3: 1,\n",
     "        defs.ANSWER_28_2: 2,\n",
     "        defs.ANSWER_28_1: 3,\n",
-    "    }\n",
-    "}, inplace=True)\n",
-    "\n",
-    "X.replace({\n",
+    "    },\n",
     "    defs.QUESTION_29:\n",
     "    {\n",
     "        np.NaN: -1,\n",
@@ -269,8 +247,10 @@
     "        defs.ANSWER_29_3: 1,\n",
     "        defs.ANSWER_29_2: 2,\n",
     "        defs.ANSWER_29_1: 3,\n",
-    "    }\n",
-    "}, inplace=True)"
+    "    },\n",
+    "}, inplace=True)\n",
+    "\n",
+    "X[defs.QUESTION_9] = X[defs.QUESTION_9].astype('int64')"
    ]
   },
   {
@@ -290,8 +270,8 @@
    "source": [
     "for feature in defs.BINARY_FEATURES:\n",
     "    if X[feature].isna().sum():\n",
-    "        X.replace({feature: {np.NaN: -1}}, inplace=True)\n",
-    "    X.replace({feature: {defs.YES: 1, defs.NO: 0}}, inplace=True)"
+    "        X[feature].replace({np.NaN: -1}, inplace=True)\n",
+    "    X[feature].replace({defs.YES: 1, defs.NO: 0}, inplace=True)"
    ]
   },
   {
