--- a/Neural Network.ipynb
+++ b/Neural Network.ipynb
@@ -136,8 +136,8 @@
    "source": [
     "for feature in defs.BINARY_FEATURES:\n",
     "    if df[feature].isna().sum():\n",
-    "        df.replace({feature: {np.NaN: 0}}, inplace=True)\n",
-    "    df.replace({feature: {defs.YES: 1, defs.NO: 0}}, inplace=True)"
+    "        df[feature].replace({np.NaN: 0}, inplace=True)\n",
+    "    df[feature].replace({defs.YES: 1, defs.NO: 0}, inplace=True)"
    ]
   },
   {
