--- a/CatBoost.ipynb
+++ b/CatBoost.ipynb
@@ -67,8 +67,8 @@
    "source": [
     "for feature in defs.BINARY_FEATURES:\n",
     "    if  df[feature].isna().sum():\n",
-    "        df.replace({feature: {np.NaN: -1}}, inplace=True)\n",
-    "    df.replace({feature: {defs.YES: 1, defs.NO: 0}}, inplace=True)"
+    "        df[feature].replace({np.NaN: -1}, inplace=True)\n",
+    "    df[feature].replace({defs.YES: 1, defs.NO: 0}, inplace=True)"
    ]
   },
   {
@@ -94,9 +94,7 @@
     "        defs.ANSWER_3_3: 2,\n",
     "        defs.ANSWER_3_4: 3,\n",
     "        defs.ANSWER_3_5: 4,\n",
-    "    }\n",
-    "}, inplace=True)\n",
-    "df.replace({\n",
+    "    },\n",
     "    defs.QUESTION_5:\n",
     "    {\n",
     "        np.NaN: -1,\n",
@@ -105,9 +103,7 @@
     "        defs.ANSWER_5_3: 2,\n",
     "        defs.ANSWER_5_2: 3,\n",
     "        defs.ANSWER_5_1: 4,\n",
-    "    }\n",
-    "}, inplace=True)\n",
-    "df.replace({\n",
+    "    },\n",
     "    defs.QUESTION_7:\n",
     "    {\n",
     "        np.NaN: -1,\n",
@@ -117,11 +113,11 @@
     "        defs.ANSWER_7_3: 3,\n",
     "        defs.ANSWER_7_2: 4,\n",
     "        defs.ANSWER_7_1: 5,\n",
-    "    }\n",
-    "}, inplace=True)\n",
-    "df.replace({defs.QUESTION_9: {np.NaN: -1}}, inplace=True)\n",
-    "df[defs.QUESTION_9] = df[defs.QUESTION_9].astype('int64')\n",
-    "df.replace({\n",
+    "    },\n",
+    "    defs.QUESTION_9:\n",
+    "    {\n",
+    "        np.NaN: -1,\n",
+    "    },\n",
     "    defs.QUESTION_11:\n",
     "    {\n",
     "        np.NaN: -1,\n",
@@ -131,9 +127,7 @@
     "        defs.ANSWER_11_3: 3,\n",
     "        defs.ANSWER_11_2: 4,\n",
     "        defs.ANSWER_11_1: 5,\n",
-    "    }\n",
-    "}, inplace=True)\n",
-    "df.replace({\n",
+    "    },\n",
     "    defs.QUESTION_12:\n",
     "    {\n",
     "        np.NaN: -1,\n",
@@ -141,9 +135,7 @@
     "        defs.ANSWER_12_2: 1,\n",
     "        defs.ANSWER_12_3: 2,\n",
     "        defs.ANSWER_12_4: 3,\n",
-    "    }\n",
-    "}, inplace=True)\n",
-    "df.replace({\n",
+    "    },\n",
     "    defs.QUESTION_13:\n",
     "    {\n",
     "        np.NaN: -1,\n",
@@ -154,9 +146,7 @@
     "        defs.ANSWER_13_3: 4,\n",
     "        defs.ANSWER_13_2: 5,\n",
     "        defs.ANSWER_13_1: 6,\n",
-    "    }\n",
-    "}, inplace=True)\n",
-    "df.replace({\n",
+    "    },\n",
     "    defs.QUESTION_14:\n",
     "    {\n",
     "        np.NaN: -1,\n",
@@ -164,15 +154,19 @@
     "        defs.ANSWER_14_3: 1,\n",
     "        defs.ANSWER_14_2: 2,\n",
     "        defs.ANSWER_14_1: 3,\n",
-    "    }\n",
-    "}, inplace=True)\n",
-    "df.replace({defs.QUESTION_16: {np.NaN: -1}}, inplace=True)\n",
-    "df[defs.QUESTION_16] = df[defs.QUESTION_16].astype('int64')\n",
-    "df.replace({defs.QUESTION_17: {np.NaN: -1}}, inplace=True)\n",
-    "df[defs.QUESTION_17] = df[defs.QUESTION_17].astype('int64')\n",
-    "df.replace({defs.QUESTION_18: {np.NaN: -1}}, inplace=True)\n",
-    "df[defs.QUESTION_18] = df[defs.QUESTION_18].astype('int64')\n",
-    "df.replace({\n",
+    "    },\n",
+    "    defs.QUESTION_16:\n",
+    "    {\n",
+    "        np.NaN: -1,\n",
+    "    },\n",
+    "    defs.QUESTION_17:\n",
+    "    {\n",
+    "        np.NaN: -1,\n",
+    "    },\n",
+    "    defs.QUESTION_18:\n",
+    "    {\n",
+    "        np.NaN: -1,\n",
+    "    },\n",
     "    defs.QUESTION_19:\n",
     "    {\n",
     "        np.NaN: -1,\n",
@@ -180,9 +174,7 @@
     "        defs.ANSWER_19_20_2: 1,\n",
     "        defs.ANSWER_19_20_3: 2,\n",
     "        defs.ANSWER_19_20_4: 3,\n",
-    "    }\n",
-    "}, inplace=True)\n",
-    "df.replace({\n",
+    "    },\n",
     "    defs.QUESTION_20:\n",
     "    {\n",
     "        np.NaN: -1,\n",
@@ -190,36 +182,28 @@
     "        defs.ANSWER_19_20_2: 1,\n",
     "        defs.ANSWER_19_20_3: 2,\n",
     "        defs.ANSWER_19_20_4: 3,\n",
-    "    }\n",
-    "}, inplace=True)\n",
-    "df.replace({\n",
+    "    },\n",
     "    defs.QUESTION_23:\n",
     "    {\n",
     "        np.NaN: -1,\n",
     "        defs.ANSWER_23_1: 0,\n",
     "        defs.ANSWER_23_2: 1,\n",
     "        defs.ANSWER_23_3: 2,\n",
-    "    }\n",
-    "}, inplace=True)\n",
-    "df.replace({\n",
+    "    },\n",
     "    defs.QUESTION_25:\n",
     "    {\n",
     "        np.NaN: -1,\n",
     "        defs.ANSWER_25_1: 0,\n",
     "        defs.ANSWER_25_2: 1,\n",
     "        defs.ANSWER_25_3: 2,\n",
-    "    }\n",
-    "}, inplace=True)\n",
-    "df.replace({\n",
+    "    },\n",
     "    defs.QUESTION_26:\n",
     "    {\n",
     "        np.NaN: -1,\n",
     "        defs.ANSWER_26_1: 0,\n",
     "        defs.ANSWER_26_2: 1,\n",
     "        defs.ANSWER_26_3: 2,\n",
-    "    }\n",
-    "}, inplace=True)\n",
-    "df.replace({\n",
+    "    },\n",
     "    defs.QUESTION_27:\n",
     "    {\n",
     "        np.NaN: -1,\n",
@@ -227,9 +211,7 @@
     "        defs.ANSWER_27_3: 1,\n",
     "        defs.ANSWER_27_2: 2,\n",
     "        defs.ANSWER_27_1: 3,\n",
-    "    }\n",
-    "}, inplace=True)\n",
-    "df.replace({\n",
+    "    },\n",
     "    defs.QUESTION_28:\n",
     "    {\n",
     "        np.NaN: -1,\n",
@@ -237,9 +219,7 @@
     "        defs.ANSWER_28_3: 1,\n",
     "        defs.ANSWER_28_2: 2,\n",
     "        defs.ANSWER_28_1: 3,\n",
-    "    }\n",
-    "}, inplace=True)\n",
-    "df.replace({\n",
+    "    },\n",
     "    defs.QUESTION_29:\n",
     "    {\n",
     "        np.NaN: -1,\n",
@@ -247,8 +227,13 @@
     "        defs.ANSWER_29_3: 1,\n",
     "        defs.ANSWER_29_2: 2,\n",
     "        defs.ANSWER_29_1: 3,\n",
-    "    }\n",
-    "}, inplace=True)"
+    "    },\n",
+    "}, inplace=True)\n",
+    "\n",
+    "df[defs.QUESTION_9] = df[defs.QUESTION_9].astype('int64')\n",
+    "df[defs.QUESTION_16] = df[defs.QUESTION_16].astype('int64')\n",
+    "df[defs.QUESTION_17] = df[defs.QUESTION_17].astype('int64')\n",
+    "df[defs.QUESTION_18] = df[defs.QUESTION_18].astype('int64')"
    ]
   },
   {
