--- a/EDA.ipynb
+++ b/EDA.ipynb
@@ -1599,8 +1599,8 @@
    "source": [
     "for feature in defs.BINARY_FEATURES:\n",
     "    if df[feature].isna().sum():\n",
-    "        df.replace({feature: {np.NaN: -1}}, inplace=True)\n",
-    "    df.replace({feature: {defs.YES: 1, defs.NO: 0}}, inplace=True)"
+    "        df[feature].replace({np.NaN: -1}, inplace=True)\n",
+    "    df[feature].replace({defs.YES: 1, defs.NO: 0}, inplace=True)"
    ]
   },
   {
@@ -1619,9 +1619,7 @@
     "        defs.ANSWER_5_3: 2,\n",
     "        defs.ANSWER_5_2: 3,\n",
     "        defs.ANSWER_5_1: 4,\n",
-    "    }\n",
-    "}, inplace=True)\n",
-    "df.replace({\n",
+    "    },\n",
     "    defs.QUESTION_7:\n",
     "    {\n",
     "        np.NaN: -1,\n",
@@ -1631,11 +1629,11 @@
     "        defs.ANSWER_7_3: 3,\n",
     "        defs.ANSWER_7_2: 4,\n",
     "        defs.ANSWER_7_1: 5,\n",
-    "    }\n",
-    "}, inplace=True)\n",
-    "df.replace({defs.QUESTION_9: {np.NaN: -1}}, inplace=True)\n",
-    "df[defs.QUESTION_9] = df[defs.QUESTION_9].astype('int64')\n",
-    "df.replace({\n",
+    "    },\n",
+    "    defs.QUESTION_9:\n",
+    "    {\n",
+    "        np.NaN: -1,\n",
+    "    },\n",
     "    defs.QUESTION_11:\n",
     "    {\n",
     "        np.NaN: -1,\n",
@@ -1645,9 +1643,7 @@
     "        defs.ANSWER_11_3: 3,\n",
     "        defs.ANSWER_11_2: 4,\n",
     "        defs.ANSWER_11_1: 5,\n",
-    "    }\n",
-    "}, inplace=True)\n",
-    "df.replace({\n",
+    "    },\n",
     "    defs.QUESTION_12:\n",
     "    {\n",
     "        np.NaN: -1,\n",
@@ -1655,9 +1651,7 @@
     "        defs.ANSWER_12_2: 1,\n",
     "        defs.ANSWER_12_3: 2,\n",
     "        defs.ANSWER_12_4: 3,\n",
-    "    }\n",
-    "}, inplace=True)\n",
-    "df.replace({\n",
+    "    },\n",
     "    defs.QUESTION_13:\n",
     "    {\n",
     "        np.NaN: -1,\n",
@@ -1668,9 +1662,7 @@
     "        defs.ANSWER_13_3: 4,\n",
     "        defs.ANSWER_13_2: 5,\n",
     "        defs.ANSWER_13_1: 6,\n",
-    "    }\n",
-    "}, inplace=True)\n",
-    "df.replace({\n",
+    "    },\n",
     "    defs.QUESTION_14:\n",
     "    {\n",
     "        np.NaN: -1,\n",
@@ -1678,15 +1670,19 @@
     "        defs.ANSWER_14_3: 1,\n",
     "        defs.ANSWER_14_2: 2,\n",
     "        defs.ANSWER_14_1: 3,\n",
-    "    }\n",
-    "}, inplace=True)\n",
-    "df.replace({defs.QUESTION_16: {np.NaN: -1}}, inplace=True)\n",
-    "df[defs.QUESTION_16] = df[defs.QUESTION_16].astype('int64')\n",
-    "df.replace({defs.QUESTION_17: {np.NaN: -1}}, inplace=True)\n",
-    "df[defs.QUESTION_17] = df[defs.QUESTION_17].astype('int64')\n",
-    "df.replace({defs.QUESTION_18: {np.NaN: -1}}, inplace=True)\n",
-    "df[defs.QUESTION_18] = df[defs.QUESTION_18].astype('int64')\n",
-    "df.replace({\n",
+    "    },\n",
+    "    defs.QUESTION_16:\n",
+    "    {\n",
+    "        np.NaN: -1,\n",
+    "    },\n",
+    "    defs.QUESTION_17:\n",
+    "    {\n",
+    "        np.NaN: -1,\n",
+    "    },\n",
+    "    defs.QUESTION_18:\n",
+    "    {\n",
+    "        np.NaN: -1,\n",
+    "    },\n",
     "    defs.QUESTION_19:\n",
     "    {\n",
     "        np.NaN: -1,\n",
@@ -1694,9 +1690,7 @@
     "        defs.ANSWER_19_20_2: 1,\n",
     "        defs.ANSWER_19_20_3: 2,\n",
     "        defs.ANSWER_19_20_4: 3,\n",
-    "    }\n",
-    "}, inplace=True)\n",
-    "df.replace({\n",
+    "    },\n",
     "    defs.QUESTION_20:\n",
     "    {\n",
     "        np.NaN: -1,\n",
@@ -1704,18 +1698,14 @@
     "        defs.ANSWER_19_20_2: 1,\n",
     "        defs.ANSWER_19_20_3: 2,\n",
     "        defs.ANSWER_19_20_4: 3,\n",
-    "    }\n",
-    "}, inplace=True)\n",
-    "df.replace({\n",
+    "    },\n",
     "    defs.QUESTION_26:\n",
     "    {\n",
     "        np.NaN: -1,\n",
     "        defs.ANSWER_26_1: 0,\n",
     "        defs.ANSWER_26_2: 1,\n",
     "        defs.ANSWER_26_3: 2,\n",
-    "    }\n",
-    "}, inplace=True)\n",
-    "df.replace({\n",
+    "    },\n",
     "    defs.QUESTION_27:\n",
     "    {\n",
     "        np.NaN: -1,\n",
@@ -1723,9 +1713,7 @@
     "        defs.ANSWER_27_3: 1,\n",
     "        defs.ANSWER_27_2: 2,\n",
     "        defs.ANSWER_27_1: 3,\n",
-    "    }\n",
-    "}, inplace=True)\n",
-    "df.replace({\n",
+    "    },\n",
     "    defs.QUESTION_28:\n",
     "    {\n",
     "        np.NaN: -1,\n",
@@ -1733,9 +1721,7 @@
     "        defs.ANSWER_28_3: 1,\n",
     "        defs.ANSWER_28_2: 2,\n",
     "        defs.ANSWER_28_1: 3,\n",
-    "    }\n",
-    "}, inplace=True)\n",
-    "df.replace({\n",
+    "    },\n",
     "    defs.QUESTION_29:\n",
     "    {\n",
     "        np.NaN: -1,\n",
@@ -1743,8 +1729,13 @@
     "        defs.ANSWER_29_3: 1,\n",
     "        defs.ANSWER_29_2: 2,\n",
     "        defs.ANSWER_29_1: 3,\n",
-    "    }\n",
-    "}, inplace=True)"
+    "    },\n",
+    "}, inplace=True)\n",
+    "\n",
+    "df[defs.QUESTION_9] = df[defs.QUESTION_9].astype('int64')\n",
+    "df[defs.QUESTION_16] = df[defs.QUESTION_16].astype('int64')\n",
+    "df[defs.QUESTION_17] = df[defs.QUESTION_17].astype('int64')\n",
+    "df[defs.QUESTION_18] = df[defs.QUESTION_18].astype('int64')"
    ]
   },
   {
