апдейт оформления проекта
добавил README.md и навигация в тетрадках

--- a/EDA.ipynb
+++ b/EDA.ipynb
@@ -9,6 +9,51 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "9e2bfafb",
+   "metadata": {},
+   "source": [
+    "## Навигация\n",
+    "\n",
+    "1. [Анализ распределений](#Анализ-распределений)\n",
+    "   - [2. Возраст](#2.-Возраст)\n",
+    "   - [3. Семейное положение](#3.-Семейное-положение)\n",
+    "   - [4. Если имеете супруга или партнёра, как долго вы живёте вместе (в годах)?](#4.-Если-имеете-супруга-или-партнёра,-как-долго-вы-живёте-вместе-(в-годах)?)\n",
+    "   - [5. В какой семье Вы выросли?](#5.-В-какой-семье-Вы-выросли?)\n",
+    "   - [6. Жив ли хотя бы один из Ваших родителей? (да/нет)](#6.-Жив-ли-хотя-бы-один-из-Ваших-родителей?-(да/нет))\n",
+    "   - [7. Если да, как часто вы общаетесь?](#7.-Если-да,-как-часто-вы-общаетесь?)\n",
+    "   - [8. Есть ли у Вас дети? (да/нет)](#8.-Есть-ли-у-Вас-дети?-(да/нет))\n",
+    "   - [9. Сколько у Вас детей?](#9.-Сколько-у-Вас-детей?)\n",
+    "   - [10. Есть ли у Вас совершеннолетние дети (да/нет)?](#10.-Есть-ли-у-Вас-совершеннолетние-дети-(да/нет)?)\n",
+    "   - [11. Если да, как часто вы общаетесь? (с совершеннолетними детьми)](#11.-Если-да,-как-часто-вы-общаетесь?-(с-совершеннолетними-детьми))\n",
+    "   - [12. Сколько человек живут вместе с Вами?](#12.-Сколько-человек-живут-вместе-с-Вами?)\n",
+    "   - [13. Каковы Ваши взаимоотношения с соседями?](#13.-Каковы-Ваши-взаимоотношения-с-соседями?)\n",
+    "   - [14. Как часто Вы встречаетесь с друзьями?](#14.-Как-часто-Вы-встречаетесь-с-друзьями?)\n",
+    "   - [15. Есть ли у Вас домашние питомцы? (да/нет)](#15.-Есть-ли-у-Вас-домашние-питомцы?-(да/нет))\n",
+    "   - [16. В течение последних 7 дней, как часто Вы практиковали тяжелые физические нагрузки?](#16.-В-течение-последних-7-дней,-как-часто-Вы-практиковали-тяжелые-физические-нагрузки?)\n",
+    "   - [17. В течение последних 7 дней, как часто Вы практиковали умеренные физические нагрузки?](#17.-В-течение-последних-7-дней,-как-часто-Вы-практиковали-умеренные-физические-нагрузки?)\n",
+    "   - [18. В течение последних 7 дней, как часто Вы ходили пешком минимум 10 минут без перерыва?](#18.-В-течение-последних-7-дней,-как-часто-Вы-ходили-пешком-минимум-10-минут-без-перерыва?)\n",
+    "   - [19. Уровень Вашего образования?](#19.-Уровень-Вашего-образования?)\n",
+    "   - [20. Каков уровень образования Вашего партнёра? (если применимо)](#20.-Каков-уровень-образования-Вашего-партнёра?-(если-применимо))\n",
+    "   - [22. Как долго Вы проживаете в этом месте? (в годах)](#22.-Как-долго-Вы-проживаете-в-этом-месте?-(в-годах))\n",
+    "   - [23. Каков тип Вашего дома?](#23.-Каков-тип-Вашего-дома?)\n",
+    "   - [24. Если Вы живёте в многоквартирном доме, то на каком этаже?](#24.-Если-Вы-живёте-в-многоквартирном-доме,-то-на-каком-этаже?)\n",
+    "   - [25. Каким транспортом Вы обычно пользуетесь?](#25.-Каким-транспортом-Вы-обычно-пользуетесь?)\n",
+    "   - [26. Сколько времени занимает Ваш путь до работы в одну сторону?](#26.-Сколько-времени-занимает-Ваш-путь-до-работы-в-одну-сторону?)\n",
+    "   - [27. Каков тип Вашей занятости?](#27.-Каков-тип-Вашей-занятости?)\n",
+    "   - [28. Каковы Ваши предпочтения в пище?](#28.-Каковы-Ваши-предпочтения-в-пище?)\n",
+    "   - [29. Каков тип Вашего питания?](#29.-Каков-тип-Вашего-питания?)\n",
+    "   - [30. Вы курите? (да/нет)](#30.-Вы-курите?-(да/нет))\n",
+    "   - [31. Количество родов](#31.-Количество-родов)\n",
+    "   - [32. Количество прерванных беременностей](#32.-Количество-прерванных-беременностей)\n",
+    "   - [33. Гинекологические заболевания (да/нет)](#33.-Гинекологические-заболевания-(да/нет))\n",
+    "   - [34. Заболевания щитовидной железы (да/нет)](#34.-Заболевания-щитовидной-железы-(да/нет))\n",
+    "   - [35. Наследственность (да/нет)](#35.-Наследственность-(да/нет))\n",
+    "2. [Точки данных с противоречивыми признаками](#Точки-данных-с-противоречивыми-признаками)\n",
+    "3. [Корреляция Пирсона между численными признаками](#Корреляция-Пирсона-между-численными-признаками)"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 1,
    "id": "a11bb115",
@@ -48,6 +93,16 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "4ba9e25f",
+   "metadata": {},
+   "source": [
+    "## Анализ распределений\n",
+    "\n",
+    "[Навигация](#Навигация)"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 4,
    "id": "3a662c70",
@@ -77,7 +132,9 @@
    "id": "204e5ec1",
    "metadata": {},
    "source": [
-    "### 2. Возраст"
+    "### 2. Возраст\n",
+    "\n",
+    "[Навигация](#Навигация)"
    ]
   },
   {
@@ -119,7 +176,9 @@
    "id": "601c4c6d",
    "metadata": {},
    "source": [
-    "### 3. Семейное положение"
+    "### 3. Семейное положение\n",
+    "\n",
+    "[Навигация](#Навигация)"
    ]
   },
   {
@@ -155,7 +214,9 @@
    "id": "265b55e1",
    "metadata": {},
    "source": [
-    "### 4. Если имеете супруга или партнёра, как долго вы живёте вместе (в годах)?"
+    "### 4. Если имеете супруга или партнёра, как долго вы живёте вместе (в годах)?\n",
+    "\n",
+    "[Навигация](#Навигация)"
    ]
   },
   {
@@ -198,7 +259,9 @@
    "id": "242ddc47",
    "metadata": {},
    "source": [
-    "### 5. В какой семье Вы выросли?"
+    "### 5. В какой семье Вы выросли?\n",
+    "\n",
+    "[Навигация](#Навигация)"
    ]
   },
   {
@@ -235,7 +298,9 @@
    "id": "2632284b",
    "metadata": {},
    "source": [
-    "### 6. Жив ли хотя бы один из Ваших родителей? (да/нет)"
+    "### 6. Жив ли хотя бы один из Ваших родителей? (да/нет)\n",
+    "\n",
+    "[Навигация](#Навигация)"
    ]
   },
   {
@@ -272,7 +337,9 @@
    "id": "95da3a8e",
    "metadata": {},
    "source": [
-    "### 7. Если да, как часто вы общаетесь?"
+    "### 7. Если да, как часто вы общаетесь?\n",
+    "\n",
+    "[Навигация](#Навигация)"
    ]
   },
   {
@@ -309,7 +376,9 @@
    "id": "ab2dfa2d",
    "metadata": {},
    "source": [
-    "### 8. Есть ли у Вас дети? (да/нет)"
+    "### 8. Есть ли у Вас дети? (да/нет)\n",
+    "\n",
+    "[Навигация](#Навигация)"
    ]
   },
   {
@@ -346,7 +415,9 @@
    "id": "0af7305c",
    "metadata": {},
    "source": [
-    "### 9. Сколько у Вас детей?"
+    "### 9. Сколько у Вас детей?\n",
+    "\n",
+    "[Навигация](#Навигация)"
    ]
   },
   {
@@ -390,7 +461,9 @@
    "id": "3e85fbd9",
    "metadata": {},
    "source": [
-    "### 10. Есть ли у Вас совершеннолетние дети (да/нет)?"
+    "### 10. Есть ли у Вас совершеннолетние дети (да/нет)?\n",
+    "\n",
+    "[Навигация](#Навигация)"
    ]
   },
   {
@@ -427,7 +500,9 @@
    "id": "e20e4d6b",
    "metadata": {},
    "source": [
-    "### 11. Если да, как часто вы общаетесь? (с совершеннолетними детьми)"
+    "### 11. Если да, как часто вы общаетесь? (с совершеннолетними детьми)\n",
+    "\n",
+    "[Навигация](#Навигация)"
    ]
   },
   {
@@ -464,7 +539,9 @@
    "id": "8fe67d2d",
    "metadata": {},
    "source": [
-    "### 12. Сколько человек живут вместе с Вами?"
+    "### 12. Сколько человек живут вместе с Вами?\n",
+    "\n",
+    "[Навигация](#Навигация)"
    ]
   },
   {
@@ -501,7 +578,9 @@
    "id": "7a72df93",
    "metadata": {},
    "source": [
-    "### 13. Каковы Ваши взаимоотношения с соседями?"
+    "### 13. Каковы Ваши взаимоотношения с соседями?\n",
+    "\n",
+    "[Навигация](#Навигация)"
    ]
   },
   {
@@ -538,7 +617,9 @@
    "id": "f08d85ac",
    "metadata": {},
    "source": [
-    "### 14. Как часто Вы встречаетесь с друзьями?"
+    "### 14. Как часто Вы встречаетесь с друзьями?\n",
+    "\n",
+    "[Навигация](#Навигация)"
    ]
   },
   {
@@ -575,7 +656,9 @@
    "id": "a8b3b726",
    "metadata": {},
    "source": [
-    "### 15. Есть ли у Вас домашние питомцы? (да/нет)"
+    "### 15. Есть ли у Вас домашние питомцы? (да/нет)\n",
+    "\n",
+    "[Навигация](#Навигация)"
    ]
   },
   {
@@ -612,14 +695,18 @@
    "id": "fd195d3d",
    "metadata": {},
    "source": [
-    "### 16. В течение последних 7 дней, как часто Вы практиковали тяжелые физические нагрузки?"
+    "### 16. В течение последних 7 дней, как часто Вы практиковали тяжелые физические нагрузки?\n",
+    "\n",
+    "[Навигация](#Навигация)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 19,
    "id": "63ba9187",
-   "metadata": {},
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [
     {
      "data": {
@@ -649,7 +736,9 @@
    "id": "aeedb144",
    "metadata": {},
    "source": [
-    "### 17. В течение последних 7 дней, как часто Вы практиковали умеренные физические нагрузки?"
+    "### 17. В течение последних 7 дней, как часто Вы практиковали умеренные физические нагрузки?\n",
+    "\n",
+    "[Навигация](#Навигация)"
    ]
   },
   {
@@ -686,7 +775,9 @@
    "id": "d725d242",
    "metadata": {},
    "source": [
-    "### 18. В течение последних 7 дней, как часто Вы ходили пешком минимум 10 минут без перерыва?"
+    "### 18. В течение последних 7 дней, как часто Вы ходили пешком минимум 10 минут без перерыва?\n",
+    "\n",
+    "[Навигация](#Навигация)"
    ]
   },
   {
@@ -723,7 +814,9 @@
    "id": "7fb78d45",
    "metadata": {},
    "source": [
-    "### 19. Уровень Вашего образования?"
+    "### 19. Уровень Вашего образования?\n",
+    "\n",
+    "[Навигация](#Навигация)"
    ]
   },
   {
@@ -760,7 +853,9 @@
    "id": "3cfe9331",
    "metadata": {},
    "source": [
-    "### 20. Каков уровень образования Вашего партнёра? (если применимо)"
+    "### 20. Каков уровень образования Вашего партнёра? (если применимо)\n",
+    "\n",
+    "[Навигация](#Навигация)"
    ]
   },
   {
@@ -797,7 +892,9 @@
    "id": "0fdedbde",
    "metadata": {},
    "source": [
-    "### 22. Как долго Вы проживаете в этом месте? (в годах)"
+    "### 22. Как долго Вы проживаете в этом месте? (в годах)\n",
+    "\n",
+    "[Навигация](#Навигация)"
    ]
   },
   {
@@ -840,7 +937,9 @@
    "id": "4d7a7ea6",
    "metadata": {},
    "source": [
-    "### 23. Каков тип Вашего дома?"
+    "### 23. Каков тип Вашего дома?\n",
+    "\n",
+    "[Навигация](#Навигация)"
    ]
   },
   {
@@ -877,7 +976,9 @@
    "id": "cd855da4",
    "metadata": {},
    "source": [
-    "### 24. Если Вы живёте в многоквартирном доме, то на каком этаже?"
+    "### 24. Если Вы живёте в многоквартирном доме, то на каком этаже?\n",
+    "\n",
+    "[Навигация](#Навигация)"
    ]
   },
   {
@@ -921,7 +1022,9 @@
    "id": "7069375c",
    "metadata": {},
    "source": [
-    "### 25. Каким транспортом Вы обычно пользуетесь?"
+    "### 25. Каким транспортом Вы обычно пользуетесь?\n",
+    "\n",
+    "[Навигация](#Навигация)"
    ]
   },
   {
@@ -958,7 +1061,8 @@
    "id": "8325f1ca",
    "metadata": {},
    "source": [
-    "### 26. Сколько времени занимает Ваш путь до работы в одну сторону?"
+    "### 26. Сколько времени занимает Ваш путь до работы в одну сторону?\n",
+    "[Навигация](#Навигация)"
    ]
   },
   {
@@ -995,7 +1099,9 @@
    "id": "6c39d081",
    "metadata": {},
    "source": [
-    "### 27. Каков тип Вашей занятости?"
+    "### 27. Каков тип Вашей занятости?\n",
+    "\n",
+    "[Навигация](#Навигация)"
    ]
   },
   {
@@ -1032,7 +1138,9 @@
    "id": "59a85fb6",
    "metadata": {},
    "source": [
-    "### 28. Каковы Ваши предпочтения в пище?"
+    "### 28. Каковы Ваши предпочтения в пище?\n",
+    "\n",
+    "[Навигация](#Навигация)"
    ]
   },
   {
@@ -1069,7 +1177,9 @@
    "id": "5b7edcb2",
    "metadata": {},
    "source": [
-    "### 29. Каков тип Вашего питания?"
+    "### 29. Каков тип Вашего питания?\n",
+    "\n",
+    "[Навигация](#Навигация)"
    ]
   },
   {
@@ -1106,7 +1216,9 @@
    "id": "3a15659f",
    "metadata": {},
    "source": [
-    "### 30. Вы курите? (да/нет)"
+    "### 30. Вы курите? (да/нет)\n",
+    "\n",
+    "[Навигация](#Навигация)"
    ]
   },
   {
@@ -1143,7 +1255,9 @@
    "id": "65378285",
    "metadata": {},
    "source": [
-    "### 31. Количество родов"
+    "### 31. Количество родов\n",
+    "\n",
+    "[Навигация](#Навигация)"
    ]
   },
   {
@@ -1186,7 +1300,9 @@
    "id": "f67b5674",
    "metadata": {},
    "source": [
-    "### 32. Количество прерванных беременностей"
+    "### 32. Количество прерванных беременностей\n",
+    "\n",
+    "[Навигация](#Навигация)"
    ]
   },
   {
@@ -1229,7 +1345,9 @@
    "id": "37bac023",
    "metadata": {},
    "source": [
-    "### 33. Гинекологические заболевания (да/нет)"
+    "### 33. Гинекологические заболевания (да/нет)\n",
+    "\n",
+    "[Навигация](#Навигация)"
    ]
   },
   {
@@ -1266,7 +1384,9 @@
    "id": "b5020264",
    "metadata": {},
    "source": [
-    "### 34. Заболевания щитовидной железы (да/нет)"
+    "### 34. Заболевания щитовидной железы (да/нет)\n",
+    "\n",
+    "[Навигация](#Навигация)"
    ]
   },
   {
@@ -1303,7 +1423,9 @@
    "id": "bdf0c7cf",
    "metadata": {},
    "source": [
-    "### 35. Наследственность (да/нет)"
+    "### 35. Наследственность (да/нет)\n",
+    "\n",
+    "[Навигация](#Навигация)"
    ]
   },
   {
@@ -1340,7 +1462,9 @@
    "id": "455848e0",
    "metadata": {},
    "source": [
-    "## Точки данных с противоречивыми признаками"
+    "## Точки данных с противоречивыми признаками\n",
+    "\n",
+    "[Навигация](#Навигация)"
    ]
   },
   {
@@ -1732,7 +1856,9 @@
    "id": "eeda41a6",
    "metadata": {},
    "source": [
-    "## Корреляция Пирсона между численными признаками"
+    "## Корреляция Пирсона между численными признаками\n",
+    "\n",
+    "[Навигация](#Навигация)"
    ]
   },
   {
