--- a/Neural Network.ipynb
+++ b/Neural Network.ipynb
@@ -1,6 +1,28 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "id": "d6bdde53",
+   "metadata": {},
+   "source": [
+    "# Neural Network"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "603e352e",
+   "metadata": {},
+   "source": [
+    "## Навигация\n",
+    "\n",
+    "1. [Предобработка](#Предобработка)\n",
+    "1. [One-Hot Encoding модель](#One-Hot-Encoding-модель)\n",
+    "1. [train/val/test разбивка и конвертация из DataFame в Dataset](#train/val/test-разбивка-и-конвертация-из-DataFame-в-Dataset)\n",
+    "1. [Модель нейронной сети](#Модель-нейронной-сети)\n",
+    "1. [SHAP values](#SHAP-values)"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 1,
    "id": "566535c2",
@@ -65,7 +87,9 @@
    "id": "03e02406",
    "metadata": {},
    "source": [
-    "### Предобработка"
+    "## Предобработка\n",
+    "\n",
+    "[Навигация](#Навигация)"
    ]
   },
   {
@@ -147,7 +171,9 @@
    "id": "d60d22c2",
    "metadata": {},
    "source": [
-    "## One-Hot Encoding модель"
+    "## One-Hot Encoding модель\n",
+    "\n",
+    "[Навигация](#Навигация)"
    ]
   },
   {
@@ -211,7 +237,9 @@
    "id": "eb702f6c",
    "metadata": {},
    "source": [
-    "### train/val/test разбивка и конвертация из DataFame в Dataset"
+    "## train/val/test разбивка и конвертация из DataFame в Dataset\n",
+    "\n",
+    "[Навигация](#Навигация)"
    ]
   },
   {
@@ -295,7 +323,9 @@
    "id": "69b7389a",
    "metadata": {},
    "source": [
-    "### Модель нейронной сети"
+    "## Модель нейронной сети\n",
+    "\n",
+    "[Навигация](#Навигация)"
    ]
   },
   {
@@ -488,7 +518,9 @@
    "id": "ac3122f9",
    "metadata": {},
    "source": [
-    "### SHAP values"
+    "## SHAP values\n",
+    "\n",
+    "[Навигация](#Навигация)"
    ]
   },
   {
@@ -616,7 +648,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -630,7 +662,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.3"
+   "version": "3.10.7"
   }
  },
  "nbformat": 4,
