поправил использование pd.get_dummies()

--- a/DecisionTreeClassifier.ipynb
+++ b/DecisionTreeClassifier.ipynb
@@ -492,11 +492,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "X_OHE = X.copy()\n",
-    "\n",
-    "X_OHE = pd.concat([X_OHE, pd.get_dummies(X_OHE[utils.constants.QUESTION_3], prefix='вопрос3')], axis=1).drop([utils.constants.QUESTION_3], axis=1)\n",
-    "X_OHE = pd.concat([X_OHE, pd.get_dummies(X_OHE[utils.constants.QUESTION_23], prefix='вопрос23')], axis=1).drop([utils.constants.QUESTION_23], axis=1)\n",
-    "X_OHE = pd.concat([X_OHE, pd.get_dummies(X_OHE[utils.constants.QUESTION_25], prefix='вопрос25')], axis=1).drop([utils.constants.QUESTION_25], axis=1)"
+    "X_OHE = pd.get_dummies(\n",
+    "    X, columns=[utils.constants.QUESTION_3, utils.constants.QUESTION_23, utils.constants.QUESTION_25], drop_first=True)"
    ]
   },
   {
@@ -596,19 +593,25 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "X_OHE = pd.concat([X_OHE, pd.get_dummies(X_OHE[utils.constants.QUESTION_5], prefix='вопрос5')], axis=1).drop([utils.constants.QUESTION_5], axis=1)\n",
-    "X_OHE = pd.concat([X_OHE, pd.get_dummies(X_OHE[utils.constants.QUESTION_7], prefix='вопрос7')], axis=1).drop([utils.constants.QUESTION_7], axis=1)\n",
-    "X_OHE = pd.concat([X_OHE, pd.get_dummies(X_OHE[utils.constants.QUESTION_9], prefix='вопрос9')], axis=1).drop([utils.constants.QUESTION_9], axis=1)\n",
-    "X_OHE = pd.concat([X_OHE, pd.get_dummies(X_OHE[utils.constants.QUESTION_11], prefix='вопрос11')], axis=1).drop([utils.constants.QUESTION_11], axis=1)\n",
-    "X_OHE = pd.concat([X_OHE, pd.get_dummies(X_OHE[utils.constants.QUESTION_12], prefix='вопрос12')], axis=1).drop([utils.constants.QUESTION_12], axis=1)\n",
-    "X_OHE = pd.concat([X_OHE, pd.get_dummies(X_OHE[utils.constants.QUESTION_13], prefix='вопрос13')], axis=1).drop([utils.constants.QUESTION_13], axis=1)\n",
-    "X_OHE = pd.concat([X_OHE, pd.get_dummies(X_OHE[utils.constants.QUESTION_14], prefix='вопрос14')], axis=1).drop([utils.constants.QUESTION_14], axis=1)\n",
-    "X_OHE = pd.concat([X_OHE, pd.get_dummies(X_OHE[utils.constants.QUESTION_19], prefix='вопрос19')], axis=1).drop([utils.constants.QUESTION_19], axis=1)\n",
-    "X_OHE = pd.concat([X_OHE, pd.get_dummies(X_OHE[utils.constants.QUESTION_20], prefix='вопрос20')], axis=1).drop([utils.constants.QUESTION_20], axis=1)\n",
-    "X_OHE = pd.concat([X_OHE, pd.get_dummies(X_OHE[utils.constants.QUESTION_26], prefix='вопрос26')], axis=1).drop([utils.constants.QUESTION_26], axis=1)\n",
-    "X_OHE = pd.concat([X_OHE, pd.get_dummies(X_OHE[utils.constants.QUESTION_27], prefix='вопрос27')], axis=1).drop([utils.constants.QUESTION_27], axis=1)\n",
-    "X_OHE = pd.concat([X_OHE, pd.get_dummies(X_OHE[utils.constants.QUESTION_28], prefix='вопрос28')], axis=1).drop([utils.constants.QUESTION_28], axis=1)\n",
-    "X_OHE = pd.concat([X_OHE, pd.get_dummies(X_OHE[utils.constants.QUESTION_29], prefix='вопрос29')], axis=1).drop([utils.constants.QUESTION_29], axis=1)"
+    "X_OHE = pd.get_dummies(\n",
+    "    X_OHE,\n",
+    "    columns=[\n",
+    "        utils.constants.QUESTION_5,\n",
+    "        utils.constants.QUESTION_7,\n",
+    "        utils.constants.QUESTION_9,\n",
+    "        utils.constants.QUESTION_11,\n",
+    "        utils.constants.QUESTION_12,\n",
+    "        utils.constants.QUESTION_13,\n",
+    "        utils.constants.QUESTION_14,\n",
+    "        utils.constants.QUESTION_19,\n",
+    "        utils.constants.QUESTION_20,\n",
+    "        utils.constants.QUESTION_26,\n",
+    "        utils.constants.QUESTION_27,\n",
+    "        utils.constants.QUESTION_28,\n",
+    "        utils.constants.QUESTION_29,\n",
+    "    ],\n",
+    "    drop_first=True,\n",
+    ")"
    ]
   },
   {
