вынес своё дерево решений в сабмодуль

--- a/notebooks/model_DecisionTreeClassifier.ipynb
+++ b/notebooks/model_DecisionTreeClassifier.ipynb
@@ -23,9 +23,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "id": "4648ac11",
-   "metadata": {},
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2023-11-28T21:21:27.518045Z",
+     "iopub.status.busy": "2023-11-28T21:21:27.517045Z",
+     "iopub.status.idle": "2023-11-28T21:21:40.623143Z",
+     "shell.execute_reply": "2023-11-28T21:21:40.622159Z",
+     "shell.execute_reply.started": "2023-11-28T21:21:27.518045Z"
+    }
+   },
    "outputs": [],
    "source": [
     "import os\n",
